fix: Overflow-X on Mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,6 +26,10 @@ html {
   }
 }
 
+body {
+  overflow-x: hidden;
+}
+
 button {
   border: none;
   appearance: none;
